[package]
name = "rs-raytrace"
version = "0.1.0"
authors = ["Tobias Schlatter <tobias@meisch.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3 # debugging means looking at pictures :)

[dependencies]
image = "0.23.13"
vecmath = "1.0.0"
quaternion = "0.4.1"